--- a/lib/blockquote_web/templates/quote/form.html.eex
+++ b/lib/blockquote_web/templates/quote/form.html.eex
@@ -10,6 +10,24 @@
     <%= textarea f, :body, class: "form-control" %>
     <%= error_tag f, :body %>
   </div>
+  
+  <div class="form-group">
+    <%= label f, :author_id, class: "control-label" %>
+    <%= select f, :author_id, @related_fields[:authors] , class: "form-control" %>
+    <%= error_tag f, :author_id %>
+  </div>
+  
+  <div class="form-group">
+    <%= label f, :category_id, class: "control-label" %>
+    <%= select f, :category_id, @related_fields[:categories] , class: "form-control" %>
+    <%= error_tag f, :category_id %>
+  </div>
+  
+  <div class="form-group">
+    <%= label f, :source_id, class: "control-label" %>
+    <%= select f, :source_id, @related_fields[:sources] , class: "form-control" %>
+    <%= error_tag f, :source_id %>
+  </div>
 
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
