Add shared show page header and use it for quotes

--- a/lib/blockquote_web/templates/quote/show.html.eex
+++ b/lib/blockquote_web/templates/quote/show.html.eex
@@ -1,13 +1,7 @@
-<h2>Show Quote</h2>
-
-<ul>
-
-  <li>
-    <strong>Body:</strong>
-    <%= @quote.body %>
-  </li>
-
-</ul>
-
-<span><%= link "Edit", to: quote_path(@conn, :edit, @quote) %></span>
-<span><%= link "Back", to: quote_path(@conn, :index) %></span>
+<%= render BlockquoteWeb.SharedView, "show_header.html",
+                                conn: @conn,
+                                title: "Quote",
+                                item_name_singular: "quote",
+                                item: @quote,
+                                item_columns: item_columns(@conn, @quote)
+%>
