--- a/lib/blockquote_web/templates/source/show.html.eex
+++ b/lib/blockquote_web/templates/source/show.html.eex
@@ -1,23 +1,15 @@
-<h2>Show Source</h2>
+<%= render BlockquoteWeb.SharedView, "show_header.html",
+                                conn: @conn,
+                                title: to_s(@source),
+                                item_name_singular: "source",
+                                item: @source,
+                                item_columns: item_columns(@conn, @source)
+%>
 
-<ul>
-
-  <li>
-    <strong>Title:</strong>
-    <%= @source.title %>
-  </li>
-
-  <li>
-    <strong>Subtitle:</strong>
-    <%= @source.subtitle %>
-  </li>
-
-  <li>
-    <strong>Url:</strong>
-    <%= @source.url %>
-  </li>
-
-</ul>
-
-<span><%= link "Edit", to: source_path(@conn, :edit, @source) %></span>
-<span><%= link "Back", to: source_path(@conn, :index) %></span>
+<%= render BlockquoteWeb.SharedView, "related_fields_list.html",
+                                conn: @conn,
+                                item_name_singular: "quote",
+                                items: @source.quotes,
+                                item_view: BlockquoteWeb.QuoteView,
+                                item_display_func: :to_excerpt
+%>
