--- a/lib/blockquote_web/templates/shared/related_fields_list.html.eex
+++ b/lib/blockquote_web/templates/shared/related_fields_list.html.eex
@@ -1,8 +1,10 @@
-<h4><%= String.capitalize(naive_pluralize(@item_name_singular)) %></h4>
-<ul>
-    <%= for item <- @items do %>
-        <li>
-            <%= link apply(@item_view, @item_display_func, [item]) , to: path_for_item(@conn, @item_name_singular, :show, item) %>
-        </li>
-    <% end %>
-</ul>
+<%= if Kernel.length(@items) > 0 do %>
+    <h4><%= String.capitalize(naive_pluralize(@item_name_singular)) %></h4>
+    <ul>
+        <%= for item <- @items do %>
+            <li>
+                <%= link apply(@item_view, @item_display_func, [item]) , to: path_for_item(@conn, @item_name_singular, :show, item) %>
+            </li>
+        <% end %>
+    </ul>
+<% end %>
