Edit function to test if list is empty

--- a/lib/blockquote_web/templates/shared/related_fields_list.html.eex
+++ b/lib/blockquote_web/templates/shared/related_fields_list.html.eex
@@ -1,4 +1,4 @@
-<%= if Kernel.length(@items) > 0 do %>
+<%= if !Enum.empty?(@items) do %>
     <h4><%= String.capitalize(naive_pluralize(@item_name_singular)) %></h4>
     <ul>
         <%= for item <- @items do %>
