--- a/lib/blockquote_web/templates/daily_quote/show.html.eex
+++ b/lib/blockquote_web/templates/daily_quote/show.html.eex
@@ -1,13 +1,7 @@
-<h2>Show Daily quote</h2>
-
-<ul>
-
-  <li>
-    <strong>Date used:</strong>
-    <%= @daily_quote.date_used %>
-  </li>
-
-</ul>
-
-<span><%= link "Edit", to: daily_quote_path(@conn, :edit, @daily_quote) %></span>
-<span><%= link "Back", to: daily_quote_path(@conn, :index) %></span>
+<%= render BlockquoteWeb.SharedView, "show_header.html",
+                                conn: @conn,
+                                title: "Daily quote",
+                                item_name_singular: "daily quote",
+                                item: @daily_quote,
+                                item_columns: item_columns(@conn, @daily_quote)
+%>
