--- a/lib/blockquote_web/static/sass/_header.scss
+++ b/lib/blockquote_web/static/sass/_header.scss
@@ -3,6 +3,7 @@
 .header {
     padding: 16px 0;
     background: #236E85;
+    margin-bottom: 32px;
 }
 
 .header a:link, .header a:visited {
@@ -17,4 +18,5 @@
     margin: 0;
     font-weight: 300;
     font-size: 24px;
+    padding: 0 $contentHorizontalPadding;
 }
