Start adding styles for index pages

--- a/lib/blockquote_web/static/sass/admin.scss
+++ b/lib/blockquote_web/static/sass/admin.scss
@@ -1,6 +1,8 @@
 @import 'base';
+@import 'icons';
 @import 'header';
 @import 'dashboard';
 @import 'changelists';
 @import 'forms';
 @import 'admin-home';
+@import 'index-pages';
