--- a/lib/blockquote_web/templates/shared/form.html.eex
+++ b/lib/blockquote_web/templates/shared/form.html.eex
@@ -13,7 +13,7 @@
       </div>
   <% end %>
 
-  <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+  <div class="submit-row">
+    <%= submit "Save", class: "button default" %>
   </div>
 <% end %>
