--- a/lib/blockquote_web/static/sass/_forms.scss
+++ b/lib/blockquote_web/static/sass/_forms.scss
@@ -1,3 +1,39 @@
+/* FORM DEFAULTS */
+
+input, textarea, select, .form-row p, form .button, button {
+    margin: 2px 0;
+    padding: 2px 3px;
+    vertical-align: middle;
+    font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+    font-weight: normal;
+    font-size: 13px;
+}
+
+textarea {
+    vertical-align: top;
+}
+
+input[type=text], input[type=password], input[type=email], input[type=url],
+input[type=number], textarea, select{
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    padding: 5px 6px;
+    margin-top: 0;
+}
+
+input[type=text]:focus, input[type=password]:focus, input[type=email]:focus,
+input[type=url]:focus, input[type=number]:focus, textarea:focus, select:focus{
+    border-color: #999;
+}
+
+select {
+    height: 30px;
+}
+
+select[multiple] {
+    min-height: 150px;
+}
+
 
 /* FORM ROWS */
 
@@ -7,7 +43,45 @@
     border-bottom: 1px solid #eee;
 }
 
-//inputs
+/* FORM BUTTONS */
+
+.button, input[type=submit], input[type=button], .submit-row input, .submit-row .button, a.button {
+    background: #79aec8;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+}
+
+.button:active, input[type=submit]:active, input[type=button]:active,
+.button:focus, input[type=submit]:focus, input[type=button]:focus,
+.button:hover, input[type=submit]:hover, input[type=button]:hover {
+    background: #609ab6;
+}
+
+.button[disabled], input[type=submit][disabled], input[type=button][disabled] {
+    opacity: 0.4;
+}
+
+.button.default, input[type=submit].default, .submit-row input.default {
+    border: none;
+    font-weight: 400;
+    background: #417690;
+}
+
+.button.default:active, input[type=submit].default:active,
+.button.default:focus, input[type=submit].default:focus,
+.button.default:hover, input[type=submit].default:hover {
+    background: #205067;
+}
+
+.button[disabled].default,
+input[type=submit][disabled].default,
+input[type=button][disabled].default {
+    opacity: 0.4;
+}
+
 .form-group input[type="text"]{
     width: 30em;
 }
@@ -29,15 +103,15 @@ label {
 
 
 /* SUBMIT ROW */
-
 .submit-row {
+    display: flex;
+    justify-content: flex-end;
     padding: 12px 14px;
     margin: 40px 0 20px;
     background: #f8f8f8;
     border: 1px solid #eee;
     border-radius: 4px;
     text-align: right;
-    overflow: hidden;
 }
 
 .submit-row input, .submit-row button {
