--- a/lib/blockquote_web/static/sass/_index-pages.scss
+++ b/lib/blockquote_web/static/sass/_index-pages.scss
@@ -3,3 +3,28 @@
 	justify-content: space-between;
 	align-items: center;
 }
+
+.index-list-title{
+	margin-top: 24px;
+	background-color: #f6f6f6;
+	padding: 8px;
+	text-transform: uppercase;
+	font-size: 11px;
+	border-top: 1px solid #eee;
+	border-bottom: 1px solid #eee;
+}
+
+.index-list{
+	list-style-type: none;
+	padding: 0;
+
+
+	li{
+		display: flex;
+		justify-content: space-between;
+		font-size: 13px;
+		font-weight: 600;
+		padding: 8px;
+		border-bottom: 1px solid #eee;
+	}
+}
