--- a/lib/blockquote_web/templates/layout/app.html.eex
+++ b/lib/blockquote_web/templates/layout/app.html.eex
@@ -13,6 +13,14 @@
       <div class="container branding">
         <h1 class="site-name"><a href="/admin">Block Quote</a></h1>
       </div>
+      <div class="breadcrumbs">
+        <div class="container">
+          <a href="/admin">Home</a>
+          <%= if assigns[:item_name_singular] do
+              BlockquoteWeb.SharedView.breadcrumb_link(@conn, @item_name_singular)
+          end %>
+        </div>
+    </div>
     </header>
 
     <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
