--- a/lib/blockquote_web/templates/shared/index.html.eex
+++ b/lib/blockquote_web/templates/shared/index.html.eex
@@ -4,17 +4,15 @@
     <%= link "Add " <> @item_name_singular, to: path_for_item(@conn, @item_name_singular, :new), class: "addlink" %>
   </div>
 </div>
-<h3><%= String.capitalize(@item_name_singular) %></h3>
-<table class="table">
-  <tbody>
-<%= for item <- @items do %>
-    <tr>
-      <td><%= link apply(@item_view, @item_display_func, [item]) , to: path_for_item(@conn, @item_name_singular, :show, item) %></td>
+<h3 class='index-list-title'><%= String.capitalize(@item_name_singular) %></h3>
+<ol class="index-list">
+  <%= for item <- @items do %>
+      <li>
+        <div><%= link apply(@item_view, @item_display_func, [item]) , to: path_for_item(@conn, @item_name_singular, :show, item) %></div>
 
-      <td class="text-right">
-        <span><%= link "Edit", to: path_for_item(@conn, @item_name_singular, :edit, item), class: "btn btn-default btn-xs" %></span>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
+        <div>
+          <%= link "Edit", to: path_for_item(@conn, @item_name_singular, :edit, item), class: "btn btn-default btn-xs" %>
+        </div>
+      </li>
+  <% end %>
+</ol>
