Add default styles for unordered lists

--- a/lib/blockquote_web/static/sass/_base.scss
+++ b/lib/blockquote_web/static/sass/_base.scss
@@ -86,6 +86,11 @@ h5 {
     letter-spacing: 1px;
 }
 
+ul{
+    list-style-type: square;
+    padding: 0;
+}
+
 /* PAGE STRUCTURE */
 
 .container {
