--- a/lib/blockquote_web/templates/parent_source/show.html.eex
+++ b/lib/blockquote_web/templates/parent_source/show.html.eex
@@ -1,7 +1,7 @@
 <%= render BlockquoteWeb.SharedView, "show_header.html",
                                 conn: @conn,
                                 title: to_s(@parent_source),
-                                item_name_singular: "parent source",
+                                item_name_singular: @item_name_singular,
                                 item: @parent_source,
                                 item_columns: item_columns(@conn, @parent_source)
 %>
