--- a/lib/blockquote_web/static/sass/admin.scss
+++ b/lib/blockquote_web/static/sass/admin.scss
@@ -1,7 +1,8 @@
 @import 'base';
 @import 'icons';
 @import 'header';
-@import 'dashboard';
+@import 'alerts';
 @import 'forms';
 @import 'admin-home';
 @import 'index-pages';
+@import 'show-pages';
