--- a/lib/blockquote_web/templates/layout/app.html.eex
+++ b/lib/blockquote_web/templates/layout/app.html.eex
@@ -22,9 +22,11 @@
         </div>
     </div>
     </header>
-
-    <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-    <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    
+    <div class="container">
+      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    </div>
 
     <main class="container" role="main">
       <%= render @view_module, @view_template, assigns %>
