--- a/lib/blockquote_web/templates/shared/related_fields_list.html.eex
+++ b/lib/blockquote_web/templates/shared/related_fields_list.html.eex
@@ -1,6 +1,6 @@
 <%= if !Enum.empty?(@items) do %>
-    <h4><%= String.capitalize(naive_pluralize(@item_name_singular)) %></h4>
-    <ul>
+    <h3 class="related-fields-title"><%= String.capitalize(naive_pluralize(@item_name_singular)) %></h3>
+    <ul class="related-fields-list">
         <%= for item <- @items do %>
             <li>
                 <%= link apply(@item_view, @item_display_func, [item]) , to: path_for_item(@conn, @item_name_singular, :show, item) %>
