--- a/lib/blockquote_web/templates/shared/show_header.html.eex
+++ b/lib/blockquote_web/templates/shared/show_header.html.eex
@@ -1,10 +1,10 @@
-<span><%= link "All " <> naive_pluralize(@item_name_singular), to: path_for_item(@conn, @item_name_singular, :index) %></span>
+<h2 class="page-title"><%= @title %></h2>
 
-<h2><%= @title %></h2>
+<div class="show-header-buttons">
+	<%= link "Delete", to: path_for_item(@conn, @item_name_singular, :delete, @item), method: :delete, data: [confirm: "Are you sure?"], class: "button delete" %>
+	<%= link "Edit", to: path_for_item(@conn, @item_name_singular, :edit, @item), class: "button" %>
+</div>
 
-
-<span><%= link "Edit", to: path_for_item(@conn, @item_name_singular, :edit, @item), class: "btn btn-default btn-xs" %></span>
-<span><%= link "Delete", to: path_for_item(@conn, @item_name_singular, :delete, @item), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
 <ul>
     <%= for {column_name, column_value} <- @item_columns do %>
         <li>
