--- a/lib/blockquote_web/static/sass/_header.scss
+++ b/lib/blockquote_web/static/sass/_header.scss
@@ -16,7 +16,7 @@
 .branding h1 {
     margin: 0;
     font-weight: 300;
-    font-size: 24px;
+    font-size: 1.953rem;
     padding: 16px $contentHorizontalPadding;
 }
 
@@ -25,7 +25,7 @@
 .breadcrumbs {
     background: #79aec8;
     padding: 10px 40px;
-    font-size: 14px;
+    font-size: 1rem;
     color: #c4dce8;
 }
 
