--- a/lib/blockquote_web/static/sass/_base.scss
+++ b/lib/blockquote_web/static/sass/_base.scss
@@ -9,7 +9,6 @@ $contentHorizontalPadding: 4px;
 body {
     margin: 0;
     padding: 0;
-    font-size: 14px;
     font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     color: #333;
     background: #fff;
@@ -43,11 +42,11 @@ p {
 h1,h2,h3,h4,h5 {
     font-weight: bold;
 }
-
+//major 3rd type scale
 h1, .page-title {
     margin: 0 0 20px;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 1.563rem;
     color: #666;
 }
 .page-title{
@@ -56,8 +55,8 @@ h1, .page-title {
 }
 
 h2 {
-    font-size: 16px;
-    margin: 1em 0 .5em 0;
+    font-size: 1.25rem;
+    margin: 1em 0 0.5em 0;
 }
 
 h2.subhead {
@@ -67,19 +66,19 @@ h2.subhead {
 
 h3 {
     font-size: 14px;
-    margin: .8em 0 .3em 0;
+    margin: .8em 0 0.3em 0;
     color: #666;
     font-weight: bold;
 }
 
 h4 {
-    font-size: 12px;
-    margin: 1em 0 .8em 0;
+    font-size: 1rem;
+    margin: 1em 0 0.8em 0;
     padding-bottom: 3px;
 }
 
 h5 {
-    font-size: 10px;
+    font-size: 0.8rem;
     margin: 1.5em 0 .5em 0;
     color: #666;
     text-transform: uppercase;
