--- a/lib/blockquote_web/static/sass/_index-pages.scss
+++ b/lib/blockquote_web/static/sass/_index-pages.scss
@@ -9,7 +9,7 @@
 	background-color: #f6f6f6;
 	padding: 8px;
 	text-transform: uppercase;
-	font-size: 11px;
+	font-size: 0.8rem;
 	border-top: 1px solid #eee;
 	border-bottom: 1px solid #eee;
 }
@@ -22,7 +22,7 @@
 	li{
 		display: flex;
 		justify-content: space-between;
-		font-size: 13px;
+		font-size: 1rem;
 		font-weight: 600;
 		padding: 8px;
 		border-bottom: 1px solid #eee;
