--- a/lib/blockquote_web/static/sass/_show-pages.scss
+++ b/lib/blockquote_web/static/sass/_show-pages.scss
@@ -1,3 +1,8 @@
+.show-header-title-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
 .show-header-buttons{
 	display: flex;
 	justify-content: flex-end;
