Change color scheme to green instead of sea blue

--- a/lib/blockquote_web/static/sass/_admin-home.scss
+++ b/lib/blockquote_web/static/sass/_admin-home.scss
@@ -1,7 +1,7 @@
 .admin-fields-list{
 	padding: 0;
 	width: 450px;
-	border-top: 20px solid #79aec8;
+	border-top: 20px solid $secondary_color;
 	li{
 		display: flex;
 		justify-content: space-between;
