--- a/lib/blockquote_web/static/sass/_header.scss
+++ b/lib/blockquote_web/static/sass/_header.scss
@@ -1,7 +1,7 @@
 /* HEADER */
 
 .header {
-    background: #236E85;
+    background: #33664d;
     margin-bottom: 32px;
 }
 
@@ -23,7 +23,7 @@
 /* BREADCRUMBS */
 
 .breadcrumbs {
-    background: #79aec8;
+    background: $secondary_color;
     padding: 10px 40px;
     color: #c4dce8;
 }
