--- a/lib/blockquote_web/static/sass/_forms.scss
+++ b/lib/blockquote_web/static/sass/_forms.scss
@@ -44,7 +44,7 @@ $form_group_padding: 10px;
 /* FORM BUTTONS */
 
 .button, input[type=submit], input[type=button], .submit-row input, .submit-row .button, a.button {
-    background: #79aec8;
+    background: $secondary_color;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
