Change base background color to off-white from white

--- a/lib/blockquote_web/static/sass/_base.scss
+++ b/lib/blockquote_web/static/sass/_base.scss
@@ -13,7 +13,7 @@ body {
     padding: 0;
     font-family: "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
     color: #333;
-    background: #fff;
+    background: #fbfcf8;
 }
 
 /* LINKS */
