--- a/lib/blockquote_web/static/sass/_admin-home.scss
+++ b/lib/blockquote_web/static/sass/_admin-home.scss
@@ -7,6 +7,7 @@
 		justify-content: space-between;
 		padding: 8px $contentHorizontalPadding;
 		border-bottom: 1px solid #eee;
+		background-color: #fff;
 
 		&:last-of-type{
 			border-bottom: none;
