Edit styles for lists on show pages

--- a/lib/blockquote_web/static/sass/_show-pages.scss
+++ b/lib/blockquote_web/static/sass/_show-pages.scss
@@ -16,6 +16,6 @@
 	color: #000;
 }
 .related-fields-list{
-	list-style-type: none;
-	padding-left: 8px;
+	list-style-type: square;
+	padding-left: 2em;
 }
