--- a/lib/blockquote_web/static/sass/_admin-home.scss
+++ b/lib/blockquote_web/static/sass/_admin-home.scss
@@ -5,6 +5,7 @@
 	li{
 		display: flex;
 		justify-content: space-between;
+		margin-bottom: 0;
 		padding: 8px $contentHorizontalPadding;
 		border-bottom: 1px solid #eee;
 		background-color: #fff;
