--- a/lib/blockquote_web/static/sass/_base.scss
+++ b/lib/blockquote_web/static/sass/_base.scss
@@ -88,8 +88,11 @@ h5 {
 }
 
 ul{
-    list-style-type: square;
+    list-style-type: none;
     padding: 0;
+}
+li{
+    margin-bottom: 0.5em;
 }
 
 /* PAGE STRUCTURE */
