--- a/lib/blockquote_web/templates/author/show.html.eex
+++ b/lib/blockquote_web/templates/author/show.html.eex
@@ -17,7 +17,7 @@
 <%= render BlockquoteWeb.SharedView, "related_fields_list.html",
                                 conn: @conn,
                                 item_name_singular: "quote",
-                                items: Enum.flat_map(@author.sources, &(&1.quotes)),
+                                items: @author.quotes ++ Enum.flat_map(@author.sources, &(&1.quotes)),
                                 item_view: BlockquoteWeb.QuoteView,
                                 item_display_func: :to_excerpt
 %>
