Add functionality for delete button on show pages

--- a/lib/blockquote_web/static/sass/_forms.scss
+++ b/lib/blockquote_web/static/sass/_forms.scss
@@ -1,7 +1,6 @@
 /* FORM DEFAULTS */
 
 input, textarea, select, .form-row p, form .button, button {
-    margin: 2px 0;
     padding: 2px 3px;
     vertical-align: middle;
     font-family: "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
@@ -44,12 +43,14 @@ $form_group_padding: 10px;
 /* FORM BUTTONS */
 
 .button, input[type=submit], input[type=button], .submit-row input, .submit-row .button, a.button {
+    font-size: 1rem;
     background: $secondary_color;
     padding: 10px 15px;
     border: none;
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
+    line-height: 1em;
 }
 
 .button:active, input[type=submit]:active, input[type=button]:active,
@@ -123,7 +124,6 @@ label {
 
 .submit-row input, .submit-row button {
     height: 35px;
-    line-height: 15px;
     margin: 0 0 0 5px;
 }
 
