--- a/lib/blockquote_web/templates/shared/show_header.html.eex
+++ b/lib/blockquote_web/templates/shared/show_header.html.eex
@@ -1,7 +1,7 @@
 <div class="show-header-title-container">
 	<h2 class="page-title"><%= @title %></h2>
 	<div class="show-header-buttons">
-		<%= link "Delete", to: path_for_item(@conn, @item_name_singular, :delete, @item), method: :delete, data: [confirm: "Are you sure?"], class: "button delete" %>
+        <button class="button delete" data-button="delete">Delete</button>
 		<%= link "Edit", to: path_for_item(@conn, @item_name_singular, :edit, @item), class: "button" %>
 	</div>
 </div>
@@ -13,3 +13,4 @@
         </li>
     <% end %>
 </ul>
+<%= render "hidden_delete_form.html", conn: @conn, delete_path: path_for_item(@conn, @item_name_singular, :delete, @item) %>
